@@ -1,4 +1,6 @@
 {{$NEXT}}
+- On service shutdown, truncate pid file before removing in case there are open
+  handles in other processes
 
 0.11 2017-02-23
 - Fixed bug in definition of SignalList type
@@ -10,7 +12,8 @@
 - Configurable signal trapping
 
 0.09 2017-02-21
-- Added Proc::tored::Manager->stop_file and ->pause_file to override touch file paths
+- Added Proc::tored::Manager->stop_file and ->pause_file to override touch file
+  paths
 
 0.08 2017-02-20
 - Service state is now persistent
@@ -34,7 +37,8 @@
 
 0.03 2017-02-15
 
-- Replace poll_wait_time attribute with parameter to Proc::tored::Role::Running->stop_running_process
+- Replace poll_wait_time attribute with parameter to
+  Proc::tored::Role::Running->stop_running_process
 - Use secondary lock file to avoid inconsistent flocking on mswin32
 
 0.02 2017-02-14
